--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,32 @@
-simulate one business
-add time limit to business operations
-add time limit to employee operations
+create upgrade menu
+    operating hours
+    gross income per customer
+    sales limit
+    ??? employee animation speed
+idle computation and scene idle computation
+sales limit per business
+
+profile menu
+notification for logs and mission
+
+business repair feature (repair takes days)
+map
+events
+weather
+natural disasters
+crime (robbery for uncollected sales)
+bank (loan, monthly cost)
+casino
+residence
+
+house/home to access news via tv, crypto and stock via pc
+news (events and weather)
+crypto (short term)
+stock market (long term)
+
+achievements
+new game story
+profile maker (avatar) name
+initial business picking (street_food choice of business)
+
+ending story (kapag nabili na laaht ng business at nakumpleto lahat ng achievements)
