--- a/todo.txt
+++ b/todo.txt
@@ -8,6 +8,7 @@ sales limit per business
 
 profile menu
 notification for logs and mission
+level system
 
 music and sfx system
 business repair feature (repair takes days)
